# app/Models/User.php
@@ -8,7 +8,7 @@ use Illuminate\Database\Eloquent\SoftDeletes;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 
-class Cadastro extends Authenticatable
+class User extends Authenticatable
 {
     use HasFactory, Notifiable, SoftDeletes;
 
